# universal_machinery

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  ckp_decoder.py  edit_clicktest.py  extract_ckp.py  mkdocs.yml  parse_program.py  pyproject.toml  save_rcdata.py  test_add_sub.py  test_all_types.py  test_chain2.py  test_chain_edit.py  test_different_rung.py  test_each.py
.claude/skills/verify-cert/: SKILL.md
.github/workflows/: docs.yml  submodules-on-main.yml  tests.yml
docs/: API_STABILITY.md  ARCHITECTURE.md  CONFORMANCE_TEST_PLAN.md  IEC_CONFORMANCE.md  ROADMAP.md  click_calling_convention.md  index.md
docs/api/: backends.md  builders.md  cli.md  emitters.md  exceptions.md  il.md  index.md  lowering.md  parsers.md  serialisation.md  validation.md
examples/: click_edit_rung.py
tests/: test_cli.py  test_click_backend_integration.py  test_conformance_plan_pointers.py  test_exception_hierarchy.py  test_matiec_roundtrip.py  test_openplc_backend_integration.py  test_public_api_surface.py  test_rusty_backend_integration.py
tests/click/: test_add_sub.py  test_all_types.py  test_chain2.py  test_chain_edit.py  test_different_rung.py  test_each.py
tests/emitters/: test_plcopen_xml.py  test_plcopen_xml_fbd.py  test_plcopen_xml_ld.py  test_plcopen_xml_sfc.py  test_plcopen_xml_st_body.py  test_plcopen_xsd_validation.py  test_st.py
tests/il/: test_builders.py  test_configuration.py  test_elementary_types.py  test_fbd.py  test_fbd_pin_type_check.py  test_fcall_return_type_check.py  test_field_index_type_check.py  test_iec_fbs.py  test_il.py  test_oop.py  test_polymorphic_builtin_type_check.py  test_pou_db_sfc.py  test_serialisation.py  test_sfc_type_check.py  test_st_ast.py  test_st_type_check.py  test_std_function_registry.py  test_subrange_range_check.py  test_tag_refactor.py  test_type_check.py  test_user_types.py  test_validation.py  test_var_access_config.py  test_vendor_op.py
tests/lowering/: test_callee_body_rewriter.py  test_click_calling.py  test_fbd_to_st.py  test_scheduled_calls.py  test_trampoline.py
tests/parsers/: test_plcopen_xml_reader.py  test_plcopen_xml_reader_fbd.py  test_plcopen_xml_reader_udt.py  test_sfc_condition_lowering.py  test_st_program_parser.py  test_st_text_parser.py
universal_machinery/: __init__.py  builders.py  cli.py  exceptions.py  serialisation.py  validation.py
universal_machinery/backends/: __init__.py  base.py
universal_machinery/emitters/: __init__.py  plcopen_xml.py  st.py
universal_machinery/emitters/schemas/: README.md
universal_machinery/il/: __init__.py  ast.py  configuration.py  fbd.py  oop.py  ops.py  sfc.py  st.py  types.py
universal_machinery/lowering/: __init__.py  click_calling.py  fbd_to_st.py
universal_machinery/parsers/: __init__.py  plcopen_xml.py  st_text.py
